# tvla

./: .gitignore  README.md  pyproject.toml
scripts/: convert_lerobot_to_transformers.py  pi05_libero_eval.py  pi05_libero_eval_original_repr.py  pi0_libero_eval_original_repr.py
src/tvla/data/: utils.py  visualize_2d.py  visualize_3d.py
src/tvla/data/droid/: .gitignore  README.md  convert.py  transcode_svo.py
src/tvla/data/libero/: convert.py
src/tvla/envs/: libero.py
src/tvla/envs/libero/: env.py  transform.py
src/tvla/models/gemma/: __init__.py  configuration_gemma.py  modeling_gemma.py  modular_gemma.py
src/tvla/models/paligemma/: __init__.py  configuration_paligemma.py  modeling_paligemma.py  processing_paligemma.py
src/tvla/models/pi0/: configuration_pi0.py  modeling_pi0.py  modular_pi0.py
src/tvla/models/pi05/: modeling_pi05.py  processor_pi05.py
